# py-openskills

./: .gitignore  DOCS_TRANSFORMATION_PLAN.md  PYTHON_PORT_ISSUES.md  PYTHON_PORT_PLAN.md  PYTHON_PORT_STATUS.md  README.md  exception_handling_report.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  python-ci.yml
legacy-typescript/: README.md
openskills/: __init__.py  __main__.py  cli.py  operations.py
openskills/utils/: __init__.py  agents_md.py  dirs.py  errors.py  fs_ops.py  prompts.py  repo_service.py  skill_validation.py  skills.py  yaml.py
tests/python/: conftest.py  test_cli.py  test_dirs.py  test_fs_ops.py  test_prompts.py  test_renderers.py  test_repo_service.py  test_skill_validation.py  test_workflows.py
tests/python/fixtures/: agents_with_markers.md
tests/python/fixtures/goldens/: agents_sync_with_markers.md  skills_system.xml
tests/python/fixtures/skills/invalid_missing_fields/: SKILL.md
tests/python/fixtures/skills/invalid_no_frontmatter/: SKILL.md
tests/python/fixtures/skills/valid/: SKILL.md
